# CMakeTest

./: GNUmakefile
crap/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  GNUmakefile.bak  Kazu_crapCint.cxx  Kazu_crapCint.h  LinkDef.h  Makefile  cmake_install.cmake  mymain.cc  sample.cxx  sample.h  yuntse.cxx  yuntse.h
crap/mac/: example.py
doc/: doxygenMyProject+.script  doxygenMyProject.script
